# finguard-rs

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  docker-compose_build_dev.yml  run.sh
.github/workflows/: docker-publish.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  entrypoint.sh
backend/src/: df_operations.rs  error.rs  expr.rs  http_error.rs  lib.rs  main.rs  paths.rs
finguard-zen/: vite.config.ts
finguard-zen/.lovable/: plan.md
finguard-zen/src/: routeTree.gen.ts
finguard-zen/src/components/: ThemeSwitcher.tsx
finguard-zen/src/components/finguard/: Combobox.tsx  DarkTooltip.tsx  Header.tsx  MathInput.tsx  StatusPill.tsx  SubTabs.tsx
finguard-zen/src/context/: AppContext.tsx
finguard-zen/src/routes/: __root.tsx  cashflow.tsx  expenses.tsx  networth.tsx
finguard-zen/src/styles/: arctic.css  dusk.css  forest.css  midnight.css  original.css  pitch.css
frontend/: Dockerfile  THEME_SYSTEM.md
frontend/src/components/finguard/: ConfirmButton.tsx  GlassCard.tsx
frontend/src/components/ui/: sidebar.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/routes/: __root.tsx  cashflow.tsx  categories.tsx  index.tsx
frontend/src/services/: api.ts  fx.ts  mathEval.ts  storage.ts  types.ts
frontend/src/styles/: arctic.css  ember.css
src/: config.rs  df_operations.rs  expr.rs  lib.rs  main.rs  plots.rs
src/ui/: cashflow.rs  categories.rs  charts.rs  expenses.rs  mod.rs  networth.rs  widgets.rs
tests/: config.rs  df_operations.rs  paths.rs  plots.rs
tests/common/: mod.rs
